// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sftp-users Snapshot Tests SFTP users App App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-sftp-users-main": {
    "Description": "(SO0320-sftp-users) Modern Data Architecture Accelerator. Version 1.0.0",
    "Outputs": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-sftp-users-main:role:testuser2:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-sftp-users-main:role:testuser2:id",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "RoleId",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-sftp-users-main:role:testuser2:name",
        },
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
    },
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtossmparambucketnameC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path/to/ssm/param/bucket/name",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtossmparamkmsarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path/to/ssm/param/kms/arn",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtossmparamrolearnC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path/to/ssm/param/role/arn",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtossmserveridC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path/to/ssm/server/id",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-sftp-users-main/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "sftp-users",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-sftp-users-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-sftp-users) Modern Data Architecture Accelerator. Version 1.0.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "HomeDirectory": {
            "Fn::Join": [
              "",
              [
                "/",
                {
                  "Ref": "SsmParameterValuepathtossmparambucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
                "/incoming",
              ],
            ],
          },
          "Role": {
            "Ref": "SsmParameterValuepathtossmparamrolearnC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "ServerId": {
            "Ref": "SsmParameterValuepathtossmserveridC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "SshPublicKeys": [
            "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCr1nEXAMPLEPubKey==",
          ],
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "sftp-users",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-sftp-users-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "UserName": "test-user-1",
        },
        "Type": "AWS::Transfer::User",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "HomeDirectory": "/some-home-bucket-name/incoming",
          "Role": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
          "ServerId": {
            "Ref": "SsmParameterValuepathtossmserveridC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "SshPublicKeys": [
            "ssh-rsa AAAAB3NzaC1yc2EAAAABJQAAAQEAsyyGZsEXAMPLEPubKey==",
          ],
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "sftp-users",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-sftp-users-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "UserName": "test-user-2",
        },
        "Type": "AWS::Transfer::User",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-IAM5",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Statement resource is scoped to user home directory. Wildcard is for filenames/object keys not known at deployment time.",
              },
              {
                "id": "NIST.800.53.R5-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
              },
              {
                "id": "HIPAA.Security-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
              },
              {
                "id": "PCI.DSS.321-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
              },
            ],
          },
        },
        "Properties": {
          "AssumeRolePolicyDocument": {
            "Statement": [
              {
                "Action": "sts:AssumeRole",
                "Effect": "Allow",
                "Principal": {
                  "Service": "transfer.amazonaws.com",
                },
              },
            ],
            "Version": "2012-10-17",
          },
          "RoleName": "test-org-test-env-test-domain-test-sftp-users-main-test-user-2",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "sftp-users",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-sftp-users-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::IAM::Role",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-IAM5",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Statement resource is scoped to user home directory. Wildcard is for filenames/object keys not known at deployment time.",
              },
              {
                "id": "NIST.800.53.R5-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
              },
              {
                "id": "HIPAA.Security-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
              },
              {
                "id": "PCI.DSS.321-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
              },
            ],
          },
        },
        "Properties": {
          "PolicyDocument": {
            "Statement": [
              {
                "Action": [
                  "s3:PutObject",
                  "s3:PutObjectAcl",
                  "s3:GetObject",
                  "s3:DeleteObjectVersion",
                  "s3:DeleteObject",
                  "s3:GetObjectVersion",
                  "s3:ListBucket",
                  "s3:GetBucketLocation",
                ],
                "Effect": "Allow",
                "Resource": [
                  {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::some-home-bucket-name",
                      ],
                    ],
                  },
                  {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::some-home-bucket-name/incoming/*",
                      ],
                    ],
                  },
                ],
              },
              {
                "Action": [
                  "kms:Encrypt",
                  "kms:Decrypt",
                  "kms:ReEncrypt",
                  "kms:GenerateDataKey",
                  "kms:DescribeKey",
                ],
                "Effect": "Allow",
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":kms:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":key/1234abcd-12ab-34cd-56ef-1234567890ab",
                    ],
                  ],
                },
              },
            ],
            "Version": "2012-10-17",
          },
          "PolicyName": "REPLACED-CFN-LOGICAL-ID",
          "Roles": [
            {
              "Ref": "REPLACED-CFN-LOGICAL-ID",
            },
          ],
        },
        "Type": "AWS::IAM::Policy",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-IAM5",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Statement resource is scoped to user home directory. Wildcard is for filenames/object keys not known at deployment time.",
              },
              {
                "id": "NIST.800.53.R5-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
              },
              {
                "id": "HIPAA.Security-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
              },
              {
                "id": "PCI.DSS.321-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-sftp-users-main/role/test-user-2/arn",
          "Tags": {
            "mdaa_cdk_app": "sftp-users",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-sftp-users-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-IAM5",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Statement resource is scoped to user home directory. Wildcard is for filenames/object keys not known at deployment time.",
              },
              {
                "id": "NIST.800.53.R5-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
              },
              {
                "id": "HIPAA.Security-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
              },
              {
                "id": "PCI.DSS.321-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-sftp-users-main/role/test-user-2/id",
          "Tags": {
            "mdaa_cdk_app": "sftp-users",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-sftp-users-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "RoleId",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-IAM5",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Statement resource is scoped to user home directory. Wildcard is for filenames/object keys not known at deployment time.",
              },
              {
                "id": "NIST.800.53.R5-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
              },
              {
                "id": "HIPAA.Security-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
              },
              {
                "id": "PCI.DSS.321-IAMNoInlinePolicy",
                "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-sftp-users-main/role/test-user-2/name",
          "Tags": {
            "mdaa_cdk_app": "sftp-users",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-sftp-users-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`sftp-users Snapshot Tests SFTP users Stack Snapshot Test 1`] = `
{
  "Description": "(SO0320-sftp-users) Modern Data Architecture Accelerator. Version 1.0.0",
  "Outputs": {
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-sftp-users-main:role:testuser2:arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "REPLACED-CFN-LOGICAL-ID",
          "Arn",
        ],
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-sftp-users-main:role:testuser2:id",
      },
      "Value": {
        "Fn::GetAtt": [
          "REPLACED-CFN-LOGICAL-ID",
          "RoleId",
        ],
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-sftp-users-main:role:testuser2:name",
      },
      "Value": {
        "Ref": "REPLACED-CFN-LOGICAL-ID",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuepathtossmparambucketnameC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/path/to/ssm/param/bucket/name",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuepathtossmparamkmsarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/path/to/ssm/param/kms/arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuepathtossmparamrolearnC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/path/to/ssm/param/role/arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuepathtossmserveridC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/path/to/ssm/server/id",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Description": "Stack description parameter to update on version changes",
        "Name": "/test-org/test-domain/test-sftp-users-main/aws-solution",
        "Tags": {
          "mdaa_cdk_app": "sftp-users",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-sftp-users-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "(SO0320-sftp-users) Modern Data Architecture Accelerator. Version 1.0.0",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "HomeDirectory": {
          "Fn::Join": [
            "",
            [
              "/",
              {
                "Ref": "SsmParameterValuepathtossmparambucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
              },
              "/incoming",
            ],
          ],
        },
        "Role": {
          "Ref": "SsmParameterValuepathtossmparamrolearnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "ServerId": {
          "Ref": "SsmParameterValuepathtossmserveridC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "SshPublicKeys": [
          "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCr1nEXAMPLEPubKey==",
        ],
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "sftp-users",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-sftp-users-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
        "UserName": "test-user-1",
      },
      "Type": "AWS::Transfer::User",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "HomeDirectory": "/some-home-bucket-name/incoming",
        "Role": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
        "ServerId": {
          "Ref": "SsmParameterValuepathtossmserveridC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "SshPublicKeys": [
          "ssh-rsa AAAAB3NzaC1yc2EAAAABJQAAAQEAsyyGZsEXAMPLEPubKey==",
        ],
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "sftp-users",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-sftp-users-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
        "UserName": "test-user-2",
      },
      "Type": "AWS::Transfer::User",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-IAM5",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Statement resource is scoped to user home directory. Wildcard is for filenames/object keys not known at deployment time.",
            },
            {
              "id": "NIST.800.53.R5-IAMNoInlinePolicy",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
            },
            {
              "id": "HIPAA.Security-IAMNoInlinePolicy",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
            },
            {
              "id": "PCI.DSS.321-IAMNoInlinePolicy",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
            },
          ],
        },
      },
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "transfer.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "RoleName": "test-org-test-env-test-domain-test-sftp-users-main-test-user-2",
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "sftp-users",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-sftp-users-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-IAM5",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Statement resource is scoped to user home directory. Wildcard is for filenames/object keys not known at deployment time.",
            },
            {
              "id": "NIST.800.53.R5-IAMNoInlinePolicy",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
            },
            {
              "id": "HIPAA.Security-IAMNoInlinePolicy",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
            },
            {
              "id": "PCI.DSS.321-IAMNoInlinePolicy",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
            },
          ],
        },
      },
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:PutObject",
                "s3:PutObjectAcl",
                "s3:GetObject",
                "s3:DeleteObjectVersion",
                "s3:DeleteObject",
                "s3:GetObjectVersion",
                "s3:ListBucket",
                "s3:GetBucketLocation",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::some-home-bucket-name",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::some-home-bucket-name/incoming/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "kms:Encrypt",
                "kms:Decrypt",
                "kms:ReEncrypt",
                "kms:GenerateDataKey",
                "kms:DescribeKey",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":kms:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":key/1234abcd-12ab-34cd-56ef-1234567890ab",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "REPLACED-CFN-LOGICAL-ID",
        "Roles": [
          {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-IAM5",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Statement resource is scoped to user home directory. Wildcard is for filenames/object keys not known at deployment time.",
            },
            {
              "id": "NIST.800.53.R5-IAMNoInlinePolicy",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
            },
            {
              "id": "HIPAA.Security-IAMNoInlinePolicy",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
            },
            {
              "id": "PCI.DSS.321-IAMNoInlinePolicy",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
            },
          ],
        },
      },
      "Properties": {
        "Name": "/test-org/test-domain/test-sftp-users-main/role/test-user-2/arn",
        "Tags": {
          "mdaa_cdk_app": "sftp-users",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-sftp-users-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-IAM5",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Statement resource is scoped to user home directory. Wildcard is for filenames/object keys not known at deployment time.",
            },
            {
              "id": "NIST.800.53.R5-IAMNoInlinePolicy",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
            },
            {
              "id": "HIPAA.Security-IAMNoInlinePolicy",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
            },
            {
              "id": "PCI.DSS.321-IAMNoInlinePolicy",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
            },
          ],
        },
      },
      "Properties": {
        "Name": "/test-org/test-domain/test-sftp-users-main/role/test-user-2/id",
        "Tags": {
          "mdaa_cdk_app": "sftp-users",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-sftp-users-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "RoleId",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-IAM5",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Statement resource is scoped to user home directory. Wildcard is for filenames/object keys not known at deployment time.",
            },
            {
              "id": "NIST.800.53.R5-IAMNoInlinePolicy",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
            },
            {
              "id": "HIPAA.Security-IAMNoInlinePolicy",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
            },
            {
              "id": "PCI.DSS.321-IAMNoInlinePolicy",
              "reason": "[MDAA:@aws-mdaa/utility/sftp-users-l3-construct/lib/sftp-users-l3-construct.ts:LINE:COL] Permissions are specific to this SFTP server role. Inline policy is appropriate.",
            },
          ],
        },
      },
      "Properties": {
        "Name": "/test-org/test-domain/test-sftp-users-main/role/test-user-2/name",
        "Tags": {
          "mdaa_cdk_app": "sftp-users",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-sftp-users-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
